--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ set(CMAKE_ASM_FLAGS "-D__ASSEMBLY__")
 set(SOURCES
     head.S
     drivers/pl011.c
+    utils/utils.c
+    utils/printf.c
     main.c
 )
 
@@ -28,7 +30,10 @@ set(SOURCES
 add_executable(image.elf ${SOURCES})
 
 # Header files path
-target_include_directories(image.elf PRIVATE ${CMAKE_SOURCE_DIR}/drivers)
+target_include_directories(image.elf PRIVATE
+    ${CMAKE_SOURCE_DIR}/drivers
+    ${CMAKE_SOURCE_DIR}/utils
+)
 
 # Linker scripts
 set_target_properties(image.elf PROPERTIES
