Create layout.h for physical information
1. include layout.h into linker.ld
2. CMakeLists.txt use cpp to pre-process linker.ld

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,29 @@
 cmake_minimum_required(VERSION 3.20)
 project(study-x-hyper LANGUAGES C ASM)
 
-# Cross toolchain
+# -----------------------------
+# Cross-compilation toolchain
+# -----------------------------
 set(CMAKE_C_COMPILER aarch64-none-elf-gcc)
 set(CMAKE_ASM_COMPILER aarch64-none-elf-gcc)
 set(CMAKE_LINKER aarch64-none-elf-ld)
 set(CMAKE_OBJCOPY aarch64-none-elf-objcopy)
 set(CMAKE_MKIMAGE mkimage)
 
-# Disable system detection
+# Disable system detection (bare-metal)
 set(CMAKE_SYSTEM_NAME Generic)
 set(CMAKE_SYSTEM_PROCESSOR aarch64)
 
+# -----------------------------
 # Compile flags
+# -----------------------------
 set(COMMON_FLAGS "-ffreestanding -fno-builtin -mgeneral-regs-only")
 set(CMAKE_C_FLAGS "${COMMON_FLAGS}")
 set(CMAKE_ASM_FLAGS "-D__ASSEMBLY__")
 
+# -----------------------------
 # Source files
+# -----------------------------
 set(SOURCES
     head.S
     drivers/pl011.c
@@ -28,29 +34,55 @@ set(SOURCES
     main.c
 )
 
+# -----------------------------
 # Executable target
+# -----------------------------
 add_executable(image.elf ${SOURCES})
 
-# Header files path
 target_include_directories(image.elf PRIVATE
     ${CMAKE_SOURCE_DIR}/arch
     ${CMAKE_SOURCE_DIR}/drivers
     ${CMAKE_SOURCE_DIR}/utils
 )
 
-# Linker scripts
-set_target_properties(image.elf PROPERTIES
-    LINKER_LANGUAGE C
-    LINK_FLAGS "-T ${CMAKE_SOURCE_DIR}/linker.ld"
+# -----------------------------
+# Preprocess linker script
+# -----------------------------
+set(LINKER_SCRIPT_INPUT ${CMAKE_SOURCE_DIR}/linker.ld)
+set(LINKER_SCRIPT_PROCESSED ${CMAKE_BINARY_DIR}/linker_processed.ld)
+
+add_custom_command(
+    OUTPUT ${LINKER_SCRIPT_PROCESSED}
+    COMMAND ${CMAKE_C_COMPILER}
+        -I${CMAKE_SOURCE_DIR}/arch
+        -E -P -x c ${LINKER_SCRIPT_INPUT}
+        -o ${LINKER_SCRIPT_PROCESSED}
+    DEPENDS ${LINKER_SCRIPT_INPUT} ${CMAKE_SOURCE_DIR}/arch/layout.h
+    COMMENT "Preprocessing linker script with CPP"
 )
 
-# Linker command
+add_custom_target(linker_script ALL DEPENDS ${LINKER_SCRIPT_PROCESSED})
+
+# Ensure the ELF target depends on the preprocessed linker script
+add_dependencies(image.elf linker_script)
+
+# -----------------------------
+# Linking
+# -----------------------------
+# Override link command to use ld directly (as originally intended)
 set(CMAKE_C_LINK_EXECUTABLE
     "${CMAKE_LINKER} <LINK_FLAGS> -o <TARGET> <OBJECTS>"
 )
 set(CMAKE_ASM_LINK_EXECUTABLE ${CMAKE_C_LINK_EXECUTABLE})
 
-# Remove ELF information
+set_target_properties(image.elf PROPERTIES
+    LINKER_LANGUAGE C
+    LINK_FLAGS "-T ${LINKER_SCRIPT_PROCESSED}"
+)
+
+# -----------------------------
+# Post-build: ELF => BIN => UImage
+# -----------------------------
 add_custom_command(
     OUTPUT image.bin
     COMMAND ${CMAKE_OBJCOPY} -O binary $<TARGET_FILE:image.elf> image.bin
@@ -58,7 +90,8 @@ add_custom_command(
     COMMENT "Converting ELF to raw binary: image.bin"
 )
 
-# Create UImage
+add_custom_target(bin_image ALL DEPENDS image.bin)
+
 add_custom_target(UImage
     COMMAND ${CMAKE_MKIMAGE}
         -A arm64 -O linux -C none
@@ -70,7 +103,9 @@ add_custom_target(UImage
 
 add_custom_target(all_images ALL DEPENDS UImage)
 
-# Run target
+# -----------------------------
+# Run in QEMU
+# -----------------------------
 find_program(QEMU_SYSTEM_AARCH64 qemu-system-aarch64)
 if(QEMU_SYSTEM_AARCH64 AND EXISTS "${CMAKE_SOURCE_DIR}/scripts/run_qemu.sh")
     add_custom_target(run
@@ -80,3 +115,12 @@ if(QEMU_SYSTEM_AARCH64 AND EXISTS "${CMAKE_SOURCE_DIR}/scripts/run_qemu.sh")
         COMMENT "Launching QEMU"
     )
 endif()
+
+# -----------------------------
+# Cleanup
+# -----------------------------
+set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_CLEAN_FILES
+    ${LINKER_SCRIPT_PROCESSED}
+    image.bin
+    UImage
+)
